--- a/dytw.css
+++ b/dytw.css
@@ -67,40 +67,47 @@
 	border: 0px;
 }
 .DYTWIconsmall {
-	position: absolute;
+	position: relative;
 	z-index: 2;
-	margin-left: 4px;
-	margin-top: -20px;
-	border: 0px;
+	width: 25px;
+	top: -20px;
+	left: 3px;
 }
 .DYTWIconsmall img {
 	border: 0px;
 	width: 15px;
 	height: 15px;
+	top:  19px;
+	left: 2px;
 }
+
 .DYTWIconmedium {
-	position: absolute;
+	position: relative;
 	z-index: 2;
-	margin-left: 4px;
-	margin-top: -30px;
-	border: 0px;
+	width: 25px;
+	top: -27px;
+	left: 4px;
 }
 .DYTWIconmedium img {
 	border: 0px;
 	width: 20px;
 	height: 20px;
+	top:  19px;
+	left: 2px;
 }
 .DYTWIconlarge {
-	position: absolute;
+	position: relative;
 	z-index: 2;
-	margin-left: 4px;
-	margin-top: -40px;
-	border: 0px;
+	width: 25px;
+	top: -31px;
+	left: 5px;
 }
 .DYTWIconlarge img {
 	border: 0px;
 	width: 25px;
 	height: 25px;
+	top:  19px;
+	left: 2px;
 }
 
 .DYTWcredits {
